# Incompact3d

./: .gitignore  CMakeLists.txt
.github/workflows/: Build.yml
decomp2d/: CMakeLists.txt  fft_common.inc  fft_fftw3_cosine.f90
examples/Channel-Flow/: input.i3d
examples/TBL-recycle/: input.i3d
src/: BC-Channel-flow.f90  BC-Lock-exchange.f90  BC-TBL-recycle.f90  BC-TBL-temp.f90  BC-TBL.f90  CMakeLists.txt  case.f90  implicit.f90  les_models.f90  module_param.f90  navier.f90  parameters.f90  poisson.f90  poisson_test.f90  post.f90  probes.f90  statistics.f90  time_integrators.f90  tools.f90  transeq.f90  variables.f90  visu.f90  xcompact3d.f90
